--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prova</title>
+    <!-- Propic of page-->
+    <link rel="icon" href="img/mobius.png" type="image/png" sizes="16x16">
+
+    <title>Rastelli Francesco</title>
 
     <!--    Style of home-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
@@ -15,10 +18,15 @@
     <button class="toggle" id="direction-toggle">
         <span>Toggle scroll axis</span>
         <svg aria-hidden="true" viewBox="0 0 512 512" width="100" title="arrows-alt-h">
-          <path d="M377.941 169.941V216H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.568 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296h243.882v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.568 0-33.941l-86.059-86.059c-15.119-15.12-40.971-4.412-40.971 16.97z" />
+            <path d="M377.941 169.941V216H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.568 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296h243.882v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.568 0-33.941l-86.059-86.059c-15.119-15.12-40.971-4.412-40.971 16.97z" />
         </svg>
-      </button>
-      
+    </button>
+    <header>
+        <div>
+        Rastelli Francesco
+        </div>
+    </header>
+    
       <article class="wrapper">
         <div class="marquee">
           <div class="marquee__group">
