--- a/index.html
+++ b/index.html
@@ -10,23 +10,12 @@
     <title>Rastelli Francesco</title>
 
     <!--    Style of home-->
+    <!--A Pen created on CodePen.io. Original URL: [https://codepen.io/hexagoncircle/pen/wvmjomb](https://codepen.io/hexagoncircle/pen/wvmjomb).-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <button class="toggle" id="direction-toggle">
-        <span>Toggle scroll axis</span>
-        <svg aria-hidden="true" viewBox="0 0 512 512" width="100" title="arrows-alt-h">
-            <path d="M377.941 169.941V216H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.568 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296h243.882v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.568 0-33.941l-86.059-86.059c-15.119-15.12-40.971-4.412-40.971 16.97z" />
-        </svg>
-    </button>
-    <header>
-        <div>
-        Rastelli Francesco
-        </div>
-    </header>
-    
       <article class="wrapper">
         <div class="marquee">
           <div class="marquee__group">
