--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class='scroll-animations' data-scroll-container>
     <div class='scrollsection' data-scroll-section>
       <div class='item -normal' data-scroll data-scroll-speed="2">
-            <img class='image' src='https://picsum.photos/id/1005/300/400'>
+            <img class='image' src='img/mobius.png'><!--https://picsum.photos/id/1005/300/400-->
         </div>
         <div class='item -big' data-scroll data-scroll-speed="1">
           <img class='image' src='https://picsum.photos/id/1019/600/800'>
